tests/machine/x/ocaml/group_by_sort.error
File "/tmp/TestOCamlCompiler_VMValid_Goldengroup_by_sort4140979483/001/group_by_sort.ml", line 23, characters 47-50:
23 | type record1 = { mutable cat : string; mutable val : int }
                                                    ^^^
Error: Syntax error
